# penguin

./: .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  slack_search_scraper.py
.github/workflows/: release.yml
