[tool.poetry]
name = "slack-search-export"
version = "0.1.0"
description = "Export Slack search results in a format suitable for analysis"
authors = ["Josh Guice <jguice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.40.0"
rich = "^13.7.0"
tqdm = "^4.66.1"
html2text = "^2020.1.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
